fix things so they look better on mobile

--- a/blog/themes/nqv-theme/static/css/index.css
+++ b/blog/themes/nqv-theme/static/css/index.css
@@ -23,6 +23,9 @@ body {
     background: #fcfcfc;
 }
 
+#ytplayer {
+	width: 100%; }
+
 .header {
     width: 100%;
     height: 56px;
@@ -98,6 +101,9 @@ body {
         font-size: 24px;
         margin: auto;
     }
+    #ytplayer {
+        width: 560px;
+	height: 315px; }
     .aboutContainer {
         display: flex;
         flex-wrap: wrap; }
